# pixelsort-website

./: .gitignore  AUTOSTART.md  AUTO_UPDATE.md  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  README_RUST.md  app.js  build_for_pi.bat  build_for_pi.sh  check_syntax.ps1  config.py  gpio_controller.py  image_processor.py  index.html  main.py  pixel_sorter.py  pixelsort-kiosk.service  pixelsort_config.toml  pixelsorter.js  privacy.html  requirements.txt  run.py  run_pixelsort.ps1  run_pixelsort.sh  setup.sh  setup_autostart.sh  setup_pi.sh  styles.css
.github/: copilot-instructions.md
deployment/: README.md  pixelsort-kiosk.service  run_pixelsort.sh
src/: camera.rs  camera_controller.rs  config.rs  config.rs.bak  crop.rs  gpio_controller.rs  image_ops.rs  image_processor.rs  main.rs  pixel_sorter.rs  session.rs  texture.rs  ui.rs  ui_old.rs
web/: index.html  manifest.json  styles.css
