[package]
name = "pixelsort-pi"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Manipulatable pixel sorting application for Raspberry Pi 5"
license = "MIT"
repository = "https://github.com/yourusername/pixelsort-pi"

[dependencies]
# Image processing
image = "0.24"
imageproc = "0.23"

# GUI framework - egui for immediate mode GUI
eframe = "0.24"
egui = "0.24"
egui_extras = "0.24"

# GPIO control for Raspberry Pi
rppal = { version = "0.14", optional = true }

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
crossbeam = "0.8"
async-trait = "0.1"

# File dialogs and system integration
rfd = "0.11"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Math utilities
nalgebra = "0.32"

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
# Development dependencies for non-ARM platforms
gilrs = { version = "0.10", optional = true }  # Gamepad input simulation for development

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1  # Some optimization for faster development builds

[[bin]]
name = "pixelsort-pi"
path = "src/main.rs"

[features]
default = ["gpio"]
gpio = ["rppal"]
dev-simulation = ["gilrs"]