[package]
name = "pixelsort-pi"
version = "0.1.0"
edition = "2021"
description = "Manipulatable pixel sorting application for Raspberry Pi 5"
license = "MIT"

[dependencies]
# Image processing
image = "0.24"

# GUI framework - egui for immediate mode GUI
eframe = "0.24"
egui = "0.24"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# File dialogs and system integration
rfd = "0.11"

# Error handling
anyhow = "1.0"

# Date and time for timestamped filenames
chrono = "0.4"

# Logging
log = "0.4"
env_logger = "0.10"

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "winnt", "winbase"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1  # Some optimization for faster development builds

[[bin]]
name = "pixelsort-pi"
path = "src/main.rs"

[features]
default = ["camera"]
camera = []  # Camera support via libcamera system calls